--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -1,7 +1,10 @@
 name: Publish Docker
 on:
-  push:
-    branches: [ master ]
+  # This will only run when a new release is created, this means that pushes \
+  # and merges to master wouldn't trigger a new publish.
+  release:
+    types:
+      - created
 
 jobs:
   build:
@@ -11,9 +14,7 @@ jobs:
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@master
       with:
-        name: strombergdev/frameio-python-sync/fio-sync
-        username: ${{ github.actor }}
-        password: ${{ github.password }}
+        name: strombergdev/frameio-python-sync/fio-sync # This might be right, could also be be strombergdev/fio-sync?
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
         registry: docker.pkg.github.com
-#         username: ${{ secrets.DOCKER_USERNAME }}
-#         password: ${{ secrets.DOCKER_PASSWORD }}
