--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -1,10 +1,8 @@
 name: Publish Docker
 on:
-  # This will only run when a new release is created, this means that pushes \
-  # and merges to master wouldn't trigger a new publish.
-  release:
-    types:
-      - created
+  push:
+    tags:
+      - 'v*'
 
 jobs:
   push_to_registry:
@@ -12,7 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
-        uses: actions/checkout@master
+        uses: actions/checkout@v2
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          images: strombergdev/frameio-python-sync
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -22,4 +25,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: strombergdev/frameio-python-sync:latest
+          tags: ${{ steps.meta.outputs.tags }}
